include summaries and read more button in list type pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,15 +2,19 @@
 
 {{ partial "heading.html" . }}
 {{ .Content }}
-{{ range .Pages.GroupByPublishDate "2006" }}
-<h3>{{ .Key }}</h3>
-<ul>
-  {{ range .Pages }}
-  <li>
-    {{ .PublishDate.Format "2006-01-02" }} – <a href="{{ .Permalink }}">{{ .Title }}</a>
-  </li>
-  {{ end }}
-</ul>
+{{ range first 10 .Pages }}
+    <article>
+      <!-- this <div> includes the title summary -->
+      <div>
+        <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+        {{ .Summary }}
+      </div>
+      {{ if .Truncated }}
+      <!-- This <div> includes a read more link, but only if the summary is truncated... -->
+      <div>
+        <a href="{{ .RelPermalink }}">Read More…</a>
+      </div>
+      {{ end }}
+    </article>
 {{ end }}
-
 {{ end }}
